[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Fonts/Bomberman.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/MainMenu/MenuButton.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI/Logo.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -566.1
margin_top = -43.7266
margin_right = 1729.9
margin_bottom = 1228.27
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -59.913
margin_right = 200.0
margin_bottom = 6.08704
rect_clip_content = false
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "[center]START"
text = "START"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = 40.087
margin_right = 200.0
margin_bottom = 106.087
rect_clip_content = false
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "[center]EXIT"
text = "EXIT"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="StartButton" to="StartButton" method="_on_StartButton_mouse_entered"]
[connection signal="mouse_exited" from="StartButton" to="StartButton" method="_on_StartButton_mouse_exited"]
[connection signal="mouse_entered" from="ExitButton" to="ExitButton" method="_on_StartButton_mouse_entered"]
[connection signal="mouse_exited" from="ExitButton" to="ExitButton" method="_on_StartButton_mouse_exited"]
